--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       
     
     <input type="text" id="myInput" value="" placeholder="name...">
@@ -25,7 +25,6 @@
   </div>
 
 
-  <form>
     <input name="email" type="email" placeholder="Email Adress">
     <input name="pass" type="password" placeholder="password">
     <input type="submit" value="submit!">
